bugfix: maintain featured image ratio on mobile

--- a/content/themes/pitaveri/sass/pages/_single-project.scss
+++ b/content/themes/pitaveri/sass/pages/_single-project.scss
@@ -107,6 +107,7 @@
             bottom: 0;
             height: 100%;
             width: auto;
+            max-width: none;
         }
 
         @include breakpoint($breakpoint-s) {
